[gd_scene load_steps=5 format=3 uid="uid://d334gixj0knp2"]

[ext_resource type="Texture2D" uid="uid://ka2hvvyuvy72" path="res://resources/sprites/Herz.png" id="1_0q8qi"]
[ext_resource type="Script" uid="uid://dxywwmdo5uvo4" path="res://scenes/continue_screen/continue_screen.gd" id="1_lm4v8"]
[ext_resource type="FontFile" uid="uid://b6oytbii1s7h" path="res://resources/fonts/mago3.ttf" id="2_swusp"]
[ext_resource type="Texture2D" uid="uid://bta3q36pm4m1q" path="res://resources/sprites/MuÌˆnze.png" id="3_6ktt1"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_lm4v8")

[node name="ContinueScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ContinueButton" type="TextureButton" parent="ContinueScreen"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 1
offset_left = 512.0
offset_top = 128.0
offset_right = 1024.0
offset_bottom = 640.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("1_0q8qi")
ignore_texture_size = true
stretch_mode = 4

[node name="Coins" type="HBoxContainer" parent="ContinueScreen/ContinueButton"]
layout_mode = 0
offset_left = 126.64
offset_top = 302.0
offset_right = 417.64
offset_bottom = 439.0

[node name="MarginContainer2" type="MarginContainer" parent="ContinueScreen/ContinueButton/Coins"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="CoinLabel" type="Label" parent="ContinueScreen/ContinueButton/Coins/MarginContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.907897, 0.688939, 0.242307, 1)
theme_override_fonts/font = ExtResource("2_swusp")
theme_override_font_sizes/font_size = 160
text = "150"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ContinueScreen/ContinueButton/Coins"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="ContinueScreen/ContinueButton/Coins/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_6ktt1")
expand_mode = 2

[node name="BackToMenuButton" type="Button" parent="ContinueScreen"]
layout_mode = 0
offset_top = 416.0
offset_right = 1280.0
offset_bottom = 716.0
theme_override_fonts/font = ExtResource("2_swusp")
theme_override_font_sizes/font_size = 64
text = "Back To Menu"
flat = true

[connection signal="pressed" from="ContinueScreen/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="ContinueScreen/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
